Biblioteca funcionando com 404 e ajuste de análise

--- a/Em Grupo/Trabalho Intermediário/ExtraçãoDeDados.ipynb
+++ b/Em Grupo/Trabalho Intermediário/ExtraçãoDeDados.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,19 +23,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['Ano de Ingresso'] = pd.to_numeric(df['Ano de Ingresso'])\n",
+    "df['Ano_Ingresso'] = pd.to_numeric(df['Ano_Ingresso'])\n",
     "df['CR'] = pd.to_numeric(df['CR'])\n",
-    "df['Joga Algo'] = df['Joga Algo']==1\n",
-    "df['Joga LoL'] = df['Joga LoL']==1"
+    "df['Joga_Algo'] = df['Joga_Algo']==1\n",
+    "df['Joga_LoL'] = df['Joga_LoL']==1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,30 +52,336 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nick: **********\n",
+      "ID: 200304136\n",
+      "Nível: 89\n",
+      "Total de Partidas: 3767\n",
+      "Total de Tempo de Jogo (estimado): 2197 horas\n",
+      "Campeão preferido: Yasuo\n",
+      "Maestria com o Campeão: 124061\n",
+      "Elo: GOLD\n",
+      "Divisão: I\n",
+      "Vitórias: 11\n",
+      "Derrotas: 22\n",
+      "Porcentagem de Vitórias: 33.33%\n",
+      "==================================================================\n",
+      "Nick: **********\n",
+      "ID: 213331961\n",
+      "Nível: 164\n",
+      "Total de Partidas: 4778\n",
+      "Total de Tempo de Jogo (estimado): 2787 horas\n",
+      "Campeão preferido: Braum\n",
+      "Maestria com o Campeão: 136457\n",
+      "Elo: PLATINUM\n",
+      "Divisão: III\n",
+      "Vitórias: 142\n",
+      "Derrotas: 122\n",
+      "Porcentagem de Vitórias: 53.79%\n",
+      "==================================================================\n",
+      "Nick: **********\n",
+      "ID: 205747689\n",
+      "Nível: 86\n",
+      "Total de Partidas: 1729\n",
+      "Total de Tempo de Jogo (estimado): 1008 horas\n",
+      "Campeão preferido: Miss Fortune\n",
+      "Maestria com o Campeão: 24000\n",
+      "Elo: \n",
+      "Divisão: \n",
+      "Vitórias: \n",
+      "Derrotas: \n",
+      "Porcentagem de Vitórias: %\n",
+      "==================================================================\n",
+      "Nick: **********\n",
+      "ID: 201458849\n",
+      "Nível: 114\n",
+      "Total de Partidas: 3704\n",
+      "Total de Tempo de Jogo (estimado): 2160 horas\n",
+      "Campeão preferido: Janna\n",
+      "Maestria com o Campeão: 142484\n",
+      "Elo: GOLD\n",
+      "Divisão: IV\n",
+      "Vitórias: 36\n",
+      "Derrotas: 32\n",
+      "Porcentagem de Vitórias: 52.94%\n",
+      "==================================================================\n",
+      "Nick: **********\n",
+      "ID: 210725644\n",
+      "Nível: 113\n",
+      "Total de Partidas: 3166\n",
+      "Total de Tempo de Jogo (estimado): 1846 horas\n",
+      "Campeão preferido: Tahm Kench\n",
+      "Maestria com o Campeão: 206102\n",
+      "Elo: SILVER\n",
+      "Divisão: II\n",
+      "Vitórias: 76\n",
+      "Derrotas: 85\n",
+      "Porcentagem de Vitórias: 47.2%\n",
+      "==================================================================\n",
+      "Nick: **********\n",
+      "ID: 215095300\n",
+      "Nível: 138\n",
+      "Total de Partidas: 3332\n",
+      "Total de Tempo de Jogo (estimado): 1943 horas\n",
+      "Campeão preferido: Zed\n",
+      "Maestria com o Campeão: 218438\n",
+      "Elo: PLATINUM\n",
+      "Divisão: V\n",
+      "Vitórias: 166\n",
+      "Derrotas: 155\n",
+      "Porcentagem de Vitórias: 51.71%\n",
+      "==================================================================\n",
+      "Nick: **********\n",
+      "ID: 202135935\n",
+      "Nível: 104\n",
+      "Total de Partidas: 2821\n",
+      "Total de Tempo de Jogo (estimado): 1645 horas\n",
+      "Campeão preferido: Rek'Sai\n",
+      "Maestria com o Campeão: 134568\n",
+      "Elo: PLATINUM\n",
+      "Divisão: IV\n",
+      "Vitórias: 10\n",
+      "Derrotas: 0\n",
+      "Porcentagem de Vitórias: 100.0%\n",
+      "==================================================================\n",
+      "Nick: **********\n",
+      "ID: 200585791\n",
+      "Nível: 121\n",
+      "Total de Partidas: 4091\n",
+      "Total de Tempo de Jogo (estimado): 2386 horas\n",
+      "Campeão preferido: Poppy\n",
+      "Maestria com o Campeão: 200136\n",
+      "Elo: DIAMOND\n",
+      "Divisão: V\n",
+      "Vitórias: 27\n",
+      "Derrotas: 11\n",
+      "Porcentagem de Vitórias: 71.05%\n",
+      "==================================================================\n",
+      "Nick: **********\n",
+      "ID: 214947813\n",
+      "Nível: 80\n",
+      "Total de Partidas: 1584\n",
+      "Total de Tempo de Jogo (estimado): 924 horas\n",
+      "Campeão preferido: Miss Fortune\n",
+      "Maestria com o Campeão: 122222\n",
+      "Elo: GOLD\n",
+      "Divisão: IV\n",
+      "Vitórias: 87\n",
+      "Derrotas: 74\n",
+      "Porcentagem de Vitórias: 54.04%\n",
+      "==================================================================\n",
+      "Nick: **********\n",
+      "ID: 204808303\n",
+      "Nível: 107\n",
+      "Total de Partidas: 1603\n",
+      "Total de Tempo de Jogo (estimado): 935 horas\n",
+      "Campeão preferido: Jax\n",
+      "Maestria com o Campeão: 63944\n",
+      "Elo: SILVER\n",
+      "Divisão: III\n",
+      "Vitórias: 11\n",
+      "Derrotas: 13\n",
+      "Porcentagem de Vitórias: 45.83%\n",
+      "==================================================================\n",
+      "Nick: **********\n",
+      "ID: 217440093\n",
+      "Nível: 113\n",
+      "Total de Partidas: 1328\n",
+      "Total de Tempo de Jogo (estimado): 774 horas\n",
+      "Campeão preferido: Zoe\n",
+      "Maestria com o Campeão: 109381\n",
+      "Elo: SILVER\n",
+      "Divisão: IV\n",
+      "Vitórias: 32\n",
+      "Derrotas: 42\n",
+      "Porcentagem de Vitórias: 43.24%\n",
+      "==================================================================\n",
+      "Nick: **********\n",
+      "ID: 204265094\n",
+      "Nível: 79\n",
+      "Total de Partidas: 1149\n",
+      "Total de Tempo de Jogo (estimado): 670 horas\n",
+      "Campeão preferido: Alistar\n",
+      "Maestria com o Campeão: 90727\n",
+      "Elo: GOLD\n",
+      "Divisão: V\n",
+      "Vitórias: 76\n",
+      "Derrotas: 67\n",
+      "Porcentagem de Vitórias: 53.15%\n",
+      "==================================================================\n",
+      "Nick: **********\n",
+      "ID: 1712879\n",
+      "Nível: 74\n",
+      "Total de Partidas: 2263\n",
+      "Total de Tempo de Jogo (estimado): 1320 horas\n",
+      "Campeão preferido: Lee Sin\n",
+      "Maestria com o Campeão: 174866\n",
+      "Elo: GOLD\n",
+      "Divisão: I\n",
+      "Vitórias: 54\n",
+      "Derrotas: 54\n",
+      "Porcentagem de Vitórias: 50.0%\n",
+      "==================================================================\n",
+      "Nick: **********\n",
+      "ID: 207477917\n",
+      "Nível: 82\n",
+      "Total de Partidas: 1728\n",
+      "Total de Tempo de Jogo (estimado): 1008 horas\n",
+      "Campeão preferido: Lulu\n",
+      "Maestria com o Campeão: 86998\n",
+      "Elo: GOLD\n",
+      "Divisão: IV\n",
+      "Vitórias: 36\n",
+      "Derrotas: 45\n",
+      "Porcentagem de Vitórias: 44.44%\n",
+      "==================================================================\n",
+      "Nick: **********\n",
+      "ID: 211498111\n",
+      "Nível: 141\n",
+      "Total de Partidas: 4321\n",
+      "Total de Tempo de Jogo (estimado): 2520 horas\n",
+      "Campeão preferido: Lux\n",
+      "Maestria com o Campeão: 221069\n",
+      "Elo: PLATINUM\n",
+      "Divisão: V\n",
+      "Vitórias: 48\n",
+      "Derrotas: 35\n",
+      "Porcentagem de Vitórias: 57.83%\n",
+      "==================================================================\n",
+      "Nick: **********\n",
+      "ID: 201497079\n",
+      "Nível: 38\n",
+      "Total de Partidas: 3199\n",
+      "Total de Tempo de Jogo (estimado): 1866 horas\n",
+      "Campeão preferido: Thresh\n",
+      "Maestria com o Campeão: 184854\n",
+      "Elo: GOLD\n",
+      "Divisão: III\n",
+      "Vitórias: 7\n",
+      "Derrotas: 3\n",
+      "Porcentagem de Vitórias: 70.0%\n",
+      "==================================================================\n",
+      "Nick: **********\n",
+      "ID: 202581137\n",
+      "Nível: 86\n",
+      "Total de Partidas: 2551\n",
+      "Total de Tempo de Jogo (estimado): 1488 horas\n",
+      "Campeão preferido: Thresh\n",
+      "Maestria com o Campeão: 409423\n",
+      "Elo: GOLD\n",
+      "Divisão: V\n",
+      "Vitórias: 99\n",
+      "Derrotas: 82\n",
+      "Porcentagem de Vitórias: 54.7%\n",
+      "==================================================================\n",
+      "Nick: **********\n",
+      "ID: 214430474\n",
+      "Nível: 46\n",
+      "Total de Partidas: 404\n",
+      "Total de Tempo de Jogo (estimado): 235 horas\n",
+      "Campeão preferido: Tryndamere\n",
+      "Maestria com o Campeão: 16936\n",
+      "Elo: SILVER\n",
+      "Divisão: IV\n",
+      "Vitórias: 20\n",
+      "Derrotas: 30\n",
+      "Porcentagem de Vitórias: 40.0%\n",
+      "==================================================================\n",
+      "Nick: **********\n",
+      "ID: 211196129\n",
+      "Nível: 122\n",
+      "Total de Partidas: 3109\n",
+      "Total de Tempo de Jogo (estimado): 1813 horas\n",
+      "Campeão preferido: Ryze\n",
+      "Maestria com o Campeão: 100737\n",
+      "Elo: GOLD\n",
+      "Divisão: V\n",
+      "Vitórias: 191\n",
+      "Derrotas: 180\n",
+      "Porcentagem de Vitórias: 51.48%\n",
+      "==================================================================\n",
+      "Nick: **********\n",
+      "ID: 201726538\n",
+      "Nível: 87\n",
+      "Total de Partidas: 1061\n",
+      "Total de Tempo de Jogo (estimado): 618 horas\n",
+      "Campeão preferido: Lux\n",
+      "Maestria com o Campeão: 118924\n",
+      "Elo: SILVER\n",
+      "Divisão: I\n",
+      "Vitórias: 121\n",
+      "Derrotas: 132\n",
+      "Porcentagem de Vitórias: 47.83%\n",
+      "==================================================================\n",
+      "Nick: **********\n",
+      "ID: 204211392\n",
+      "Nível: 102\n",
+      "Total de Partidas: 2653\n",
+      "Total de Tempo de Jogo (estimado): 1547 horas\n",
+      "Campeão preferido: Yasuo\n",
+      "Maestria com o Campeão: 86505\n",
+      "Elo: PLATINUM\n",
+      "Divisão: V\n",
+      "Vitórias: 131\n",
+      "Derrotas: 133\n",
+      "Porcentagem de Vitórias: 49.62%\n",
+      "==================================================================\n",
+      "Nick: **********\n",
+      "ID: 209546058\n",
+      "Nível: 109\n",
+      "Total de Partidas: 4250\n",
+      "Total de Tempo de Jogo (estimado): 2479 horas\n",
+      "Campeão preferido: Thresh\n",
+      "Maestria com o Campeão: 216549\n",
+      "Elo: PLATINUM\n",
+      "Divisão: V\n",
+      "Vitórias: 79\n",
+      "Derrotas: 77\n",
+      "Porcentagem de Vitórias: 50.64%\n",
+      "==================================================================\n",
+      "Nick: **********\n",
+      "ID: 212605830\n",
+      "Nível: 77\n",
+      "Total de Partidas: 2413\n",
+      "Total de Tempo de Jogo (estimado): 1407 horas\n",
+      "Campeão preferido: Jinx\n",
+      "Maestria com o Campeão: 123404\n",
+      "Elo: SILVER\n",
+      "Divisão: IV\n",
+      "Vitórias: 4\n",
+      "Derrotas: 7\n",
+      "Porcentagem de Vitórias: 36.36%\n",
+      "==================================================================\n"
+     ]
+    }
+   ],
    "source": [
-    "#for jogador in players:\n",
-    "#    if jogador != None:\n",
-    "#        print(\"Nick: **********\")\n",
-    "#        print(\"ID: \" + jogador.Summoner.accountId)\n",
-    "#        print(\"Nível: \" + jogador.Summoner.summonerLevel)\n",
-    "#        print(\"Total de Partidas: \" +  jogador.MatchList.totalGames)\n",
-    "#        print(\"Total de Tempo de Jogo (estimado): \" +  jogador.MatchList.totalHours + \" horas\")\n",
-    "#        print(\"Campeão preferido: \" + jogador.Champions.mainChampionName)\n",
-    "#        print(\"Maestria com o Campeão: \" + jogador.Champions.mainChampionPoints)\n",
-    "#        print(\"Elo: \"+ jogador.Leagues.tier)\n",
-    "#        print(\"Divisão: \" + jogador.Leagues.rank)\n",
-    "#        print(\"Vitórias: \" + str(jogador.Leagues.wins))\n",
-    "#        print(\"Derrotas: \" + str(jogador.Leagues.losses))\n",
-    "#        print(\"Porcentagem de Vitórias: \" + str(jogador.Leagues.winrate) + \"%\")\n",
-    "#        print(\"==================================================================\")"
+    "for jogador in players:\n",
+    "    if jogador != None:\n",
+    "        print(\"Nick: **********\")\n",
+    "        print(\"ID: \" + jogador.Summoner.accountId)\n",
+    "        print(\"Nível: \" + jogador.Summoner.summonerLevel)\n",
+    "        print(\"Total de Partidas: \" +  jogador.MatchList.totalGames)\n",
+    "        print(\"Total de Tempo de Jogo (estimado): \" +  jogador.MatchList.totalHours + \" horas\")\n",
+    "        print(\"Campeão preferido: \" + jogador.Champions.mainChampionName)\n",
+    "        print(\"Maestria com o Campeão: \" + jogador.Champions.mainChampionPoints)\n",
+    "        print(\"Elo: \"+ jogador.Leagues.tier)\n",
+    "        print(\"Divisão: \" + jogador.Leagues.rank)\n",
+    "        print(\"Vitórias: \" + str(jogador.Leagues.wins))\n",
+    "        print(\"Derrotas: \" + str(jogador.Leagues.losses))\n",
+    "        print(\"Porcentagem de Vitórias: \" + str(jogador.Leagues.winrate) + \"%\")\n",
+    "        print(\"==================================================================\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,30 +423,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['Nível'] = niveis\n",
-    "df['Num Partidas'] = partidas\n",
-    "df['Horas Jogadas'] = horas\n",
-    "df['Campeão Preferido'] = campeoes\n",
+    "df['Nivel'] = niveis\n",
+    "df['Num_Partidas'] = partidas\n",
+    "df['Horas_Jogadas'] = horas\n",
+    "df['Campeao_Preferido'] = campeoes\n",
     "df['Maestria'] = maestrias\n",
     "df['Elo'] = elos\n",
-    "df['Divisão'] = ranks\n",
-    "df['Vitórias'] = vitorias\n",
+    "df['Divisao'] = ranks\n",
+    "df['Vitorias'] = vitorias\n",
     "df['Derrotas'] = derrotas\n",
-    "df['% Vitórias'] = winrates"
+    "df['Porcentagem_Vitorias'] = winrates"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv('dadosExtraidos.csv', sep=',')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -159,7 +472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
