--- a/Em Grupo/Trabalho Intermediário/Biblioteca.ipynb
+++ b/Em Grupo/Trabalho Intermediário/Biblioteca.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {
     "scrolled": true
    },
@@ -33,12 +33,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Configurações\n",
-    "API_KEY = 'RGAPI-0280835c-3c1c-4b42-9fa6-81f35a07924b'\n",
+    "API_KEY = 'RGAPI-82b32172-5558-461f-91f5-18cc9d13fb10'\n",
     "REGIAO = 'br1'\n",
     "URL_BASE = 'https://'+REGIAO+'.api.riotgames.com/'\n",
     "NICK_TESTE = 'TheDarkDescent'"
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,17 +63,19 @@
     "    def __init__(self, nick):\n",
     "        self.nick = nick\n",
     "        self.linkInfoPerfil = URL_BASE+'lol/summoner/v3/summoners/by-name/'+self.nick+'?api_key='+API_KEY\n",
-    "        self.infoPerfil = requests.get(self.linkInfoPerfil).json()\n",
-    "        self.accountId = str(self.infoPerfil['accountId'])\n",
-    "        self.profileIconId = str(self.infoPerfil['profileIconId'])\n",
-    "        self.summonerLevel = str(self.infoPerfil['summonerLevel'])\n",
-    "        self.id = str(self.infoPerfil['id'])\n",
-    "        self.revisionDate = str(self.infoPerfil['revisionDate'])"
+    "        self.infoPerfil = requests.get(self.linkInfoPerfil)\n",
+    "        if self.infoPerfil.ok==True:\n",
+    "            self.infoPerfil =  self.infoPerfil.json()\n",
+    "            self.accountId = str(self.infoPerfil['accountId'])\n",
+    "            self.profileIconId = str(self.infoPerfil['profileIconId'])\n",
+    "            self.summonerLevel = str(self.infoPerfil['summonerLevel'])\n",
+    "            self.id = str(self.infoPerfil['id'])\n",
+    "            self.revisionDate = str(self.infoPerfil['revisionDate'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,17 +94,18 @@
     "            n=n-1\n",
     "    \n",
     "    def __init__(self, summoner):\n",
-    "        self.playerId = summoner.id\n",
-    "        self.linkInfoChampions = URL_BASE+'lol/champion-mastery/v3/champion-masteries/by-summoner/'+self.playerId+'?api_key='+API_KEY\n",
-    "        self.infoChampions = requests.get(self.linkInfoChampions).json()\n",
-    "        self.mainChampionId = str(self.infoChampions[0]['championId'])\n",
-    "        self.mainChampionPoints = str(self.infoChampions[0]['championPoints'])\n",
-    "        self.mainChampionName = self.getChampionName(self.mainChampionId)\n"
+    "        if(summoner.accountId != ''):\n",
+    "            self.playerId = summoner.id\n",
+    "            self.linkInfoChampions = URL_BASE+'lol/champion-mastery/v3/champion-masteries/by-summoner/'+self.playerId+'?api_key='+API_KEY\n",
+    "            self.infoChampions = requests.get(self.linkInfoChampions).json()\n",
+    "            self.mainChampionId = str(self.infoChampions[0]['championId'])\n",
+    "            self.mainChampionPoints = str(self.infoChampions[0]['championPoints'])\n",
+    "            self.mainChampionName = self.getChampionName(self.mainChampionId)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,16 +118,17 @@
     "        return str(int(int(self.totalGames)*35/60))\n",
     "    \n",
     "    def __init__(self, summoner):\n",
-    "        self.linkInfoMatches = URL_BASE+'lol/match/v3/matchlists/by-account/'+summoner.accountId+'?beginIndex=201&api_key='+API_KEY\n",
-    "        self.infoMatches = requests.get(self.linkInfoMatches).json()\n",
-    "        self.totalGames = str(self.infoMatches['totalGames'])\n",
-    "        self.matches = self.infoMatches['matches']\n",
-    "        self.totalHours = self.getHorasJogadas()"
+    "        if(summoner.accountId != ''):\n",
+    "            self.linkInfoMatches = URL_BASE+'lol/match/v3/matchlists/by-account/'+summoner.accountId+'?beginIndex=201&api_key='+API_KEY\n",
+    "            self.infoMatches = requests.get(self.linkInfoMatches).json()\n",
+    "            self.totalGames = str(self.infoMatches['totalGames'])\n",
+    "            self.matches = self.infoMatches['matches']\n",
+    "            self.totalHours = self.getHorasJogadas()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,16 +181,17 @@
     "        self.winrate = self.getWinrate(self.allLeagues[self.iHigher]['wins'], self.allLeagues[self.iHigher]['losses'])\n",
     "    \n",
     "    def __init__(self, summoner):\n",
-    "        self.linkInfoLeagues = URL_BASE+'lol/league/v3/positions/by-summoner/'+summoner.id+'?api_key='+API_KEY\n",
-    "        self.allLeagues = self.infoLeagues = requests.get(self.linkInfoLeagues).json()\n",
-    "        self.queueType = str(self.getHigherQueue())\n",
-    "        if self.iHigher != -1:\n",
-    "            self.getHigherInfo()"
+    "        if(summoner.accountId != ''):\n",
+    "            self.linkInfoLeagues = URL_BASE+'lol/league/v3/positions/by-summoner/'+summoner.id+'?api_key='+API_KEY\n",
+    "            self.allLeagues = self.infoLeagues = requests.get(self.linkInfoLeagues).json()\n",
+    "            self.queueType = str(self.getHigherQueue())\n",
+    "            if self.iHigher != -1:\n",
+    "                self.getHigherInfo()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,13 +207,6 @@
     "        self.MatchList = MatchList(self.Summoner)\n",
     "        self.Leagues = Leagues(self.Summoner)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -216,6 +214,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
