Acrescenta perfil médio do jogador de lol

--- a/Em Grupo/Trabalho Intermediário/ExplorandoDados/AnaliseDados.ipynb
+++ b/Em Grupo/Trabalho Intermediário/ExplorandoDados/AnaliseDados.ipynb
@@ -1435,27 +1435,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nível Médio:  99.36363636363636\n",
-      "Num Partidas Médio:  2656.9545454545455\n",
-      "Horas Média:  1549.4545454545455\n",
-      "Maestria Média:  131971.0\n",
-      "Winrate Médio:  52.59428571428572\n"
+      "Nível Médio:  99.36363636363636 \n",
+      "Nível Max:  164.0\n",
+      "Num Partidas Médio:  2656.9545454545455 \n",
+      "Num Partidas Max:  4778.0\n",
+      "Horas Média:  1549.4545454545455 \n",
+      "Horas Max:  2787.0\n",
+      "Maestria Média:  131971.0 \n",
+      "Maestria Max:  221069.0\n",
+      "Winrate Médio:  52.59428571428572 \n",
+      "Winrate Max:  100.0\n"
      ]
     }
    ],
    "source": [
-    "print(\"Nível Médio: \", jogaLol['Nivel'].mean())\n",
-    "print(\"Num Partidas Médio: \", jogaLol['Num_Partidas'].mean())\n",
-    "print(\"Horas Média: \", jogaLol['Horas_Jogadas'].mean())\n",
-    "print(\"Maestria Média: \", jogaLol['Maestria'].mean())\n",
-    "print(\"Winrate Médio: \", jogaLol['Porcentagem_Vitorias'].mean())"
+    "print(\"Nível Médio: \", jogaLol['Nivel'].mean(), \"\\nNível Max: \", jogaLol['Nivel'].max())\n",
+    "print(\"Num Partidas Médio: \", jogaLol['Num_Partidas'].mean(), \"\\nNum Partidas Max: \", jogaLol['Num_Partidas'].max())\n",
+    "print(\"Horas Média: \", jogaLol['Horas_Jogadas'].mean(), \"\\nHoras Max: \", jogaLol['Horas_Jogadas'].max())\n",
+    "print(\"Maestria Média: \", jogaLol['Maestria'].mean(), \"\\nMaestria Max: \", jogaLol['Maestria'].max())\n",
+    "print(\"Winrate Médio: \", jogaLol['Porcentagem_Vitorias'].mean(), \"\\nWinrate Max: \", jogaLol['Porcentagem_Vitorias'].max())"
    ]
   },
   {
