Melhoria de análise inicial

--- a/Em Grupo/Trabalho Intermediário/ExplorandoDados/AnaliseDados.ipynb
+++ b/Em Grupo/Trabalho Intermediário/ExplorandoDados/AnaliseDados.ipynb
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 395,
    "metadata": {},
    "outputs": [
     {
@@ -246,6 +246,86 @@
       "Porcentagem de alunos que jogam algo:  74.64788732394366\n",
       "Porcentagem de alunos que jogam LoL:  41.509433962264154\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Grupo</th>\n",
+       "      <th>CR</th>\n",
+       "      <th>Qtd Amostras</th>\n",
+       "      <th>%</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Geral</td>\n",
+       "      <td>59.821831</td>\n",
+       "      <td>71</td>\n",
+       "      <td>100%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Joga Algo</td>\n",
+       "      <td>58.587736</td>\n",
+       "      <td>53</td>\n",
+       "      <td>74.6479</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Joga LoL</td>\n",
+       "      <td>61.090909</td>\n",
+       "      <td>22</td>\n",
+       "      <td>41.5094</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Joga Outros</td>\n",
+       "      <td>56.811290</td>\n",
+       "      <td>31</td>\n",
+       "      <td>58.4906</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Não Joga</td>\n",
+       "      <td>63.455556</td>\n",
+       "      <td>18</td>\n",
+       "      <td>25.3521</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Grupo         CR  Qtd Amostras        %\n",
+       "0        Geral  59.821831            71     100%\n",
+       "1    Joga Algo  58.587736            53  74.6479\n",
+       "2     Joga LoL  61.090909            22  41.5094\n",
+       "3  Joga Outros  56.811290            31  58.4906\n",
+       "4     Não Joga  63.455556            18  25.3521"
+      ]
+     },
+     "execution_count": 395,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -274,12 +354,18 @@
     "\n",
     "#porcentagem de jogadores\n",
     "print(\"Porcentagem de alunos que jogam algo: \", (len(joga)*100)/(len(joga)+len(nJoga)))\n",
-    "print(\"Porcentagem de alunos que jogam LoL: \", (len(jogaLol)*100)/len(joga))"
+    "print(\"Porcentagem de alunos que jogam LoL: \", (len(jogaLol)*100)/len(joga))\n",
+    "d = {'Grupo' : ['Geral', 'Joga Algo', 'Joga LoL', 'Joga Outros', 'Não Joga'], \n",
+    "     'CR' : [tabela['CR'].mean(), joga['CR'].mean(), jogaLol['CR'].mean(), naoJogaLol2['CR'].mean(), nJoga['CR'].mean()], \n",
+    "     'Qtd Amostras' : [len(tabela), len(joga), len(jogaLol), len(naoJogaLol2), len(nJoga)],\n",
+    "    '%' : ['100%', (len(joga)*100)/(len(joga)+len(nJoga)), (len(jogaLol)*100)/len(joga), (len(naoJogaLol2)*100)/len(joga), (len(nJoga)*100)/(len(joga)+len(nJoga))]}\n",
+    "medias = pd.DataFrame(data=d)\n",
+    "medias"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 396,
    "metadata": {},
    "outputs": [
     {
